# extensions-ParticleSystem

./: CMakeLists.txt  README.txt
Math/: IInterpolator.h  Interpolators.h  LinearInterpolator.h  QuadraticInterpolator.h
Particles/: BillboardParticle.h  DebugModifier.h  DirectionParticle.h  Emitter.h  EnergyParticle.h  EnergyParticleGroup.h  FieldFieldModifier.h  IEmitter.h  IModifier.h  IParticle.h  IParticleGroup.h  InterpolatingFieldModifier.h  LineParticle.h  Modifiers.h  ParticleGroup.h  ParticleGroups.h  ParticleSystem.cpp  ParticleSystem.h  Particles.h  PointEmitter.h  PointerFieldModifier.h  StaticEnergyModifier.h  StaticFieldModifier.h  StaticForceModifier.h  TransformationEmitter.h  WobblyFieldModifier.h
